--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,162 +1,186 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Create New User"
-        android:textSize="40sp"
-        android:gravity="center"
-        app:layout_constraintBottom_toTopOf="@id/linearMain"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <LinearLayout
-
-        android:id="@+id/linearMain"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.498"
-        tools:ignore="MissingConstraints">
-
-
-        <EditText
-            android:id="@+id/editFirstName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="32dp"
-            android:layout_marginVertical="16dp"
-            android:gravity="center"
-            android:hint="First Name"
-            android:inputType="textPersonName" />
-
-        <EditText
-            android:id="@+id/editLastName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="32dp"
-            android:layout_marginVertical="16dp"
-            android:gravity="center"
-            android:hint="Last Name"
-            android:inputType="textPersonName" />
-
-        <TextView
-            android:id="@+id/textDisplayDate"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:text="Select birth date"
-            android:textSize="20sp"
-            android:layout_marginHorizontal="32dp"
-            android:layout_marginVertical="16dp" />
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="154dp"
+        tools:layout_editor_absoluteY="160dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="32dp"
-            android:layout_marginVertical="16dp"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
-            <EditText
-                android:id="@+id/editHeight"
-                android:layout_width="100dp"
-                android:layout_height="45dp"
-                android:gravity="center"
-                android:hint="Height"
-                android:inputType="number"/>
 
             <TextView
-                android:layout_width="50dp"
-                android:layout_height="45dp"
-                android:layout_marginHorizontal="4dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="cm"
-                android:textSize="20dp" />
+                android:text="Create New User"
+                android:textSize="40sp"
+                app:layout_constraintBottom_toTopOf="@id/linearMain"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <LinearLayout
+
+                android:id="@+id/linearMain"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.498"
+                tools:ignore="MissingConstraints">
 
 
-            <EditText
-                android:id="@+id/editWeight"
-                android:layout_width="100dp"
-                android:layout_height="45dp"
-                android:layout_marginVertical="4dp"
-                android:gravity="center"
-                android:hint="Weight"
-                android:inputType="number"/>
+                <EditText
+                    android:id="@+id/editFirstName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="32dp"
+                    android:layout_marginVertical="16dp"
+                    android:gravity="center"
+                    android:hint="First Name"
+                    android:inputType="textPersonName" />
 
-            <TextView
-                android:layout_width="50dp"
-                android:layout_height="45dp"
-                android:layout_marginHorizontal="4dp"
+                <EditText
+                    android:id="@+id/editLastName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="32dp"
+                    android:layout_marginVertical="16dp"
+                    android:gravity="center"
+                    android:hint="Last Name"
+                    android:inputType="textPersonName" />
+
+                <TextView
+                    android:id="@+id/textDisplayDate"
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:layout_marginHorizontal="32dp"
+                    android:layout_marginVertical="16dp"
+                    android:gravity="center"
+                    android:text="Select birth date"
+                    android:textSize="20sp" />
+
+                <HorizontalScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="32dp"
+                        android:layout_marginVertical="16dp"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                        <EditText
+                            android:id="@+id/editHeight"
+                            android:layout_width="100dp"
+                            android:layout_height="45dp"
+                            android:gravity="center"
+                            android:hint="Height"
+                            android:inputType="number" />
+
+                        <TextView
+                            android:layout_width="50dp"
+                            android:layout_height="45dp"
+                            android:layout_marginHorizontal="4dp"
+                            android:gravity="center"
+                            android:text="cm"
+                            android:textSize="20dp" />
+
+
+                        <EditText
+                            android:id="@+id/editWeight"
+                            android:layout_width="100dp"
+                            android:layout_height="45dp"
+                            android:layout_marginVertical="4dp"
+                            android:gravity="center"
+                            android:hint="Weight"
+                            android:inputType="number" />
+
+                        <TextView
+                            android:layout_width="50dp"
+                            android:layout_height="45dp"
+                            android:layout_marginHorizontal="4dp"
+                            android:gravity="center"
+                            android:text="kg"
+                            android:textSize="20dp" />
+
+                    </LinearLayout>
+
+                </HorizontalScrollView>
+
+                <EditText
+                    android:id="@+id/editUserNameRegister"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="32dp"
+                    android:layout_marginVertical="16dp"
+                    android:gravity="center"
+                    android:hint="Username"
+                    android:inputType="text" />
+
+                <EditText
+                    android:id="@+id/editPasswordRegister"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="32dp"
+                    android:layout_marginVertical="16dp"
+                    android:gravity="center"
+                    android:hint="Password"
+                    android:inputType="textPassword" />
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:id="@+id/buttonsLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
                 android:gravity="center"
-                android:text="kg"
-                android:textSize="20dp" />
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/linearMain"
+                app:layout_constraintVertical_bias="0.421">
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="16dp"
+                    android:gravity="center"
+                    android:text="create" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="16dp"
+                    android:gravity="center"
+                    android:onClick="returnLogin"
+                    android:text="eiku" />
+
+
+            </LinearLayout>
 
         </LinearLayout>
-
-        <EditText
-            android:id="@+id/editUserNameRegister"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="32dp"
-            android:layout_marginVertical="16dp"
-            android:gravity="center"
-            android:hint="Username"
-            android:inputType="text" />
-
-        <EditText
-            android:id="@+id/editPasswordRegister"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="32dp"
-            android:layout_marginVertical="16dp"
-            android:gravity="center"
-            android:hint="Password"
-            android:inputType="textPassword" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/buttonsLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp"
-        android:gravity="center"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearMain"
-        app:layout_constraintVertical_bias="0.421">
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:gravity="center"
-            android:text="create" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:gravity="center"
-            android:onClick="returnLogin"
-            android:text="eiku" />
-
-
-    </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
